--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+body { margin: 0; }
+@import 'variables';
+@import '../node_modules/font-awesome/scss/font-awesome';
